Use ProtoLog native API directly from Java side
Test: atest TracingTests
Flag: android.tracing.java_native_protolog
Bug: 450529294
Change-Id: I6fd930a42dbb0b03ab0453ff77fca21a39385a02